@@ -1,3 +1,4 @@
+* Allow to trigger calculate after application
 * Allow to specify restoration order
 
 Version 1.3 - 2015-01-22
